Fix sponsor/copy spacing
with the new logo.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -826,3 +826,10 @@ h2 {
   margin-right: 10px;
   margin-bottom: 10px;
 }
+
+.copy {
+  margin-left: 40px;
+}
+.sponsor {
+  margin-left: 40px;
+}
